--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@line/liff": "^2.27.3",
+    "date-fns": "^4.1.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "qrcode": "^1.5.4",
