--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@line/liff": "^2.27.3",
     "date-fns": "^4.1.0",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "qrcode": "^1.5.4",
